force-app/main/default/objects/CMPL123CME__Inquiry__c/fields/OLY_Date_of_Event_Unknown__c.field-meta.xml
<CustomField>
    <fullName>OLY_Date_of_Event_Unknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date of Event Unknown</label>
    <type>Checkbox</type>
</CustomField>