force-app/main/default/objects/CMPL123CME__Inquiry__c/fields/OLY_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_Item_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>