force-app/main/default/objects/CMPL123CME__Inquiry__c/fields/OLY_Was_device_serviced_by_third_party__c.field-meta.xml
<CustomField>
    <fullName>OLY_Was_device_serviced_by_third_party__c</fullName>
    <label>Was device serviced by third party?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>ASKU</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>